# camera-tools

./: .gitignore  README.md  backup_camera_dir_compress_video.py  bulk_image_resize.py  bulk_video_encode.py  datename.py  exiftool.py  filter_images_like_dir.py  filter_images_with_list.py  interactive_webcam.py  jpgs_to_gif.py  mxf_to_mp4.py  organise_images_like_dir.py  pyproject.toml  read_exif.py  read_ffprobe.py  resolve_proxy_canon_r6.py  srt_framerate_convert.py  srt_to_youtube_chapters.py  srt_to_youtube_chapters_gui.pyw  srt_utils.py  zip_image_dir.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: apply-styles.yml  check-pip-compile.yml  deploy.yml  lint.yml  styles-only-changed.yml  styles.yml
instagram_tools/: README.md  config.json  image_viewer_frame.py  insta_annotate_and_upload.py  insta_upload_photo.py  key.ini.template  scrolled_text_w_callback.py
resolve_tools/: cut_detection.py  link_proxies.py  timecode - Copy.py  timecode - audio.py  timecode.py
scripts/: install_binaries.sh
src/camera_tools/: __init__.py  exiftool.py
src/camera_tools/cli/: bulk_image_resize.py  datename.py  fast_image_resize.py  jpgs_to_gif.py  main.py  organise_images_like_dir.py
src/camera_tools/utils/: burn_signature.py  log.py  pil.py  pil_text.py  pil_transpose.py  srt_utils.py
tools/: read_exif.py  srt_framerate_convert.py  srt_to_youtube_chapters.py  srt_to_youtube_chapters_gui.pyw
typings/zil/: __init__.pyi
utils/: .burn_signature.py.swp  burn_signature.py  pil_text.py  pil_transpose.py
